--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,18 @@ a {
   box-sizing: border-box;
 }
 
+h1,
+h2 {
+  color: var(--primary-color);
+}
+
 h4 {
   font-weight: normal;
+}
+
+/* VARIABLES */
+:root {
+  --primary-color: #253276;
+  --secondary-color: #b5050e;
+  --neutral-color: #f5f5f5;
 }
