--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,6 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
 }
 
 * {
@@ -20,8 +19,30 @@ h2 {
   color: var(--primary-color);
 }
 
+h1 {
+  font-size: 3.125rem;
+  margin: 0 0 1rem 0;
+}
+
+h2 {
+  font-size: 1.875rem;
+  margin: 0 0 2rem 0;
+}
+
+h3,
 h4 {
   font-weight: normal;
+  margin: 0;
+}
+
+p {
+  font-size: 1.25rem;
+}
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 2rem;
+  }
 }
 
 /* VARIABLES */
