--- a/styles/Initiative.module.css
+++ b/styles/Initiative.module.css
@@ -1,7 +1,5 @@
 .main {
-  max-width: 50rem;
-  margin: 0 auto;
-  padding: 4rem 0;
+  padding: 4rem 0 0 0;
 }
 
 .footer {
@@ -11,7 +9,27 @@
 }
 
 .section {
+  margin: 0 auto;
   margin-bottom: 5rem;
+}
+
+.sectionNarrow {
+  max-width: 50rem;
+}
+
+.sectionWide {
+  padding: 0 5rem;
+  max-width: 75rem;
+}
+
+.sectionContact {
+  background: var(--neutral-color);
+}
+
+.contactContainer {
+  margin: 0 auto;
+  padding: 5rem 0;
+  max-width: 50rem;
 }
 
 .iniTitle {
@@ -22,4 +40,44 @@
   .main {
     padding: 2rem 1rem;
   }
+}
+
+.steps {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.step {
+  width: 31%;
+  display: flex;
+  flex-direction: column;
+}
+
+.step h3 {
+  font-weight: bold;
+}
+
+.stepIcon {
+  align-self: center;
+  margin-bottom: 1.75rem;
+  height: 6.25rem;
+  width: 9rem;
+  position: relative;
+}
+
+.signButton {
+  margin-top: 3rem;
+}
+
+.furtherLinks {
+  font-size: 0.8rem;
+}
+
+.furtherLinks a {
+  text-decoration: none;
+}
+
+.furtherLinks a:hover {
+  text-decoration: underline;
 }
